--- a/analysis/median_income_regressions/assorted_linear_regressions.Rmd
+++ b/analysis/median_income_regressions/assorted_linear_regressions.Rmd
@@ -918,12 +918,13 @@ dfg_current <-
 #### Baseline Model
 
 ```{r}
-  lm0 <-
-    lmer(
+  lm1 <-
+    lm(
       ladder_now_scale ~
         raw_income_scale +
         total_pop_county_scale +
-        median_monthly_housing_cost_county_scale +
+        income_demo_ranger_scale +
+        median_home_value_county_scale +
         land_area_2010_scale +
         physicians_scale +
         education_scale +
@@ -932,14 +933,11 @@ dfg_current <-
         age_scale +
         race +
         married + 
-        year +
-        (1 + raw_income_scale|fips_code),
-      REML = FALSE,
-      control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_current
+        year,
+      data = data
     )
 
-summary(lm0)
+summary(lm1)
   
 tidy(lm0)
 
