--- a/analysis/median_income_regressions/comparing demographic reference incomes/comparing_demographic_reference_incomes_analysis.Rmd
+++ b/analysis/median_income_regressions/comparing demographic reference incomes/comparing_demographic_reference_incomes_analysis.Rmd
@@ -581,7 +581,7 @@ VIF(lm1)
 ```{r}
 lm1 <-
   glm(
-    diabetes ~
+    depression ~
       scale(income) +
       median_income_demo_esa_scale +
       total_pop_county_scale +
@@ -590,6 +590,7 @@ lm1 <-
       physicians_scale +
       employment_all +
       race +
+      age_scale +
       married + 
       year,
     dfg_rs,
@@ -602,13 +603,16 @@ VIF(lm1)
 
 lm1 <-
   glm(
-    diabetes ~
+    depression ~
       scale(income) +
-      median_income_demo_sar_scale +
+      median_income_demo_sa_scale +
       total_pop_county_scale +
       median_monthly_housing_cost_county_scale +
       land_area_2010_scale +
       physicians_scale +
+      # age_scale +
+      # sex +
+      # race +
       education_scale +
       employment_all +
       education_scale +
@@ -623,7 +627,7 @@ VIF(lm1)
 
 lm1 <-
   glm(
-    diabetes ~
+    obese ~
       scale(income) +
       median_income_demo_sa_scale +
       total_pop_county_scale +
@@ -647,7 +651,7 @@ VIF(lm1)
 
 lm1 <-
   glm(
-    diabetes ~
+    obese ~
       scale(income) +
       median_income_demo_esar_scale +
       total_pop_county_scale +
