--- a/analysis/median_income_regressions/assorted_linear_regressions.Rmd
+++ b/analysis/median_income_regressions/assorted_linear_regressions.Rmd
@@ -36,7 +36,7 @@ machine_path <-
   )
 
 dfg_rs <-
-  read_rds("D:/data/gallup/exports/dfg_rs.rds")
+  write_rds("D:/data/gallup/exports/dfg_rs.rds")
 
 dfg_rs <-
   dfg_rs %>% 
@@ -369,10 +369,12 @@ dfg_current <-
 
 ```{r}
   lm0 <-
-    lmer(
-      ladder_now_scale ~
+    lm(
+      EHI_scale ~
         raw_income_scale +
         total_pop_county_scale +
+        income_demo_ranger_sar_vars_scale +
+        median_income_county_scale +
         median_monthly_housing_cost_county_scale +
         land_area_2010_scale +
         physicians_scale +
@@ -382,11 +384,11 @@ dfg_current <-
         age_scale +
         race +
         married + 
-        year +
-        (1 + raw_income_scale|fips_code),
-      REML = FALSE,
-      control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_current
+        year,
+      #   (1 + raw_income_scale|fips_code),
+      # REML = FALSE,
+      # control = lmerControl(optimizer = "bobyqa"),
+      data = dfg_rs
     )
 
 summary(lm0)
@@ -506,9 +508,10 @@ dfg_current <-
 
 ```{r}
   lm0 <-
-    lmer(
+    lm(
       bmi_scale ~
-        raw_income_scale +
+        scale(income) +
+        income_demo_ranger_sar_vars_scale +
         total_pop_county_scale +
         median_monthly_housing_cost_county_scale +
         land_area_2010_scale +
@@ -519,11 +522,12 @@ dfg_current <-
         age_scale +
         race +
         married + 
-        year +
-        (1 + raw_income_scale|fips_code),
-      REML = FALSE,
-      control = lmerControl(optimizer = "bobyqa"),
-      data = dfg_current
+        year,
+      #   (1 + income_scale|fips_code),
+      # REML = FALSE,
+      # control = lmerControl(optimizer = "bobyqa"),
+      #family = "binomial",
+      data = dfg_rs
     )
 
 summary(lm0)
