--- a/analysis/machine_learning/gallup_ml.Rmd
+++ b/analysis/machine_learning/gallup_ml.Rmd
@@ -80,17 +80,15 @@ contrasts(dfg_rs$married) <- contr.sum(6)
 ```
 
 ```{r}
-dfg_rs %>% 
-  mutate(income_scale = scale(income)) %>% 
+data %>% 
+  #mutate(income_scale = scale(income)) %>% 
   dplyr::select(
     income_scale,
     age_scale,
     education_scale,
-    income_demo_ranger_sar_vars_scale,
-    income_demo_ranger_esar_vars_scale,
-    income_demo_ranger_all_vars_scale,
-    median_income_demo_sar_scale,
-    median_income_demo_esa_scale
+    income_demo_ranger_sar_m2_scale
+    # median_income_demo_sar_scale,
+    # median_income_demo_esa_scale
   ) %>% 
   cor(., use = "pairwise.complete.obs") %>% 
   round(., 2)
@@ -101,7 +99,7 @@ dfg_rs %>%
     lm(
       PURPOSE_scale ~
         raw_income_scale +
-        income_demo_ranger_sar_vars_scale           +
+        #income_demo_ranger_sar_m2_scale           +
         total_pop_county_scale +
         median_monthly_housing_cost_county_scale +
         land_area_2010_scale +
