--- a/analysis/median_income_regressions/health_outcome_regression_analysis.Rmd
+++ b/analysis/median_income_regressions/health_outcome_regression_analysis.Rmd
@@ -32,13 +32,14 @@ machine_path <-
     "G:/My Drive/"
   )
 
-source(paste0(machine_path, "research/projects/gallup/gallup_analysis_1/relative_status_analysis/regression_results_munge.R"))
+# source(paste0(machine_path, "research/projects/gallup/gallup_analysis_1/relative_status_analysis/regression_results_munge.R"))
 
 dfg_rs <-
   read_rds("D:/data/gallup/exports/dfg_rs.rds")
 
 dfg_rs <-
   dfg_rs %>% 
+  mutate(income_scale = scale(income )) %>% 
   mutate_at(
     vars(
       sex, 
@@ -100,7 +101,7 @@ lm_bmi_geo <-
       median_income_county_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -117,11 +118,11 @@ summary(lm_bmi_geo)
 lm_bmi_demo <-
   lm(
     bmi_scale ~
-      raw_income_scale +
-      median_income_demo_scale +
+      income_scale +
+      income_demo_ranger_sar_vars_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -147,7 +148,7 @@ lm_diab_geo <-
       median_income_county_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -157,7 +158,7 @@ lm_diab_geo <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(diabetes = ifelse(diabetes == 1, 1, ifelse(diabetes == 2, 0, NA)))
+    data = dfg_rs 
   )
 
 summary(lm_diab_geo)
@@ -165,11 +166,11 @@ summary(lm_diab_geo)
 lm_diab_demo <-
   glm(
     diabetes ~
-      raw_income_scale +
-      median_income_demo_scale +
+      income_scale +
+      income_demo_ranger_sar_vars_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -179,7 +180,7 @@ lm_diab_demo <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(diabetes = ifelse(diabetes == 1, 1, ifelse(diabetes == 2, 0, NA)))
+    data = dfg_rs 
   )
 
 summary(lm_diab_demo)
@@ -196,7 +197,7 @@ lm_hbp_geo <-
       median_income_county_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -206,7 +207,7 @@ lm_hbp_geo <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(hbp = ifelse(hbp == 1, 1, ifelse(hbp == 2, 0, NA)))
+    data = dfg_rs
   )
 
 summary(lm_hbp_geo)
@@ -214,11 +215,11 @@ summary(lm_hbp_geo)
 lm_hbp_demo <-
   glm(
     hbp ~
-      raw_income_scale +
-      median_income_demo_scale +
+      income_scale +
+      income_demo_ranger_sar_vars_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -228,7 +229,7 @@ lm_hbp_demo <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(hbp = ifelse(hbp == 1, 1, ifelse(hbp == 2, 0, NA)))
+    data = dfg_rs
   )
 
 summary(lm_hbp_demo)
@@ -245,7 +246,7 @@ lm_dep_geo <-
       median_income_county_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -255,7 +256,7 @@ lm_dep_geo <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(depression = ifelse(depression == 1, 1, ifelse(depression == 2, 0, NA)))
+    data = dfg_rs 
   )
 
 summary(lm_dep_geo)
@@ -263,11 +264,11 @@ summary(lm_dep_geo)
 lm_dep_demo <-
   glm(
     depression ~
-      raw_income_scale +
-      median_income_demo_scale +
+      income_scale +
+      income_demo_ranger_sar_vars_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -277,7 +278,7 @@ lm_dep_demo <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(depression = ifelse(depression == 1, 1, ifelse(depression == 2, 0, NA)))
+    data = dfg_rs 
   )
 
 summary(lm_dep_demo)
@@ -295,7 +296,7 @@ lm_obe_geo <-
       median_income_county_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -305,7 +306,7 @@ lm_obe_geo <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(obese = ifelse(obese == 1, 0, ifelse(obese == 0, 1, NA)))
+    data = dfg_rs
   )
 
 summary(lm_obe_geo)
@@ -313,11 +314,11 @@ summary(lm_obe_geo)
 lm_obe_demo <-
   glm(
     smoke ~
-      raw_income_scale +
-      median_income_demo_scale +
+      income_scale +
+      income_demo_ranger_sar_vars_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -327,7 +328,7 @@ lm_obe_demo <-
       married + 
       year,
     family = "binomial",
-    data = dfg_rs %>% mutate(obese = ifelse(obese == 1, 0, ifelse(obese == 0, 1, NA))) 
+    data = dfg_rs 
   )
 
 summary(lm_obe_demo)
@@ -344,7 +345,7 @@ lm_srh_geo <-
       median_income_county_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -361,11 +362,11 @@ summary(lm_srh_geo)
 lm_srh_demo <-
   lm(
     scale(sr_health) ~
-      raw_income_scale +
-      median_income_demo_scale +
+      income_scale +
+      income_demo_ranger_sar_vars_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -386,12 +387,12 @@ summary(lm_srh_demo)
 ```{r}
 lm_ht_geo <-
   lm(
-    scale(HEIGHT) ~
+    height_scale ~
       raw_income_scale +
       median_income_county_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
@@ -407,12 +408,12 @@ summary(lm_ht_geo)
 
 lm_ht_demo <-
   lm(
-    scale(HEIGHT) ~
-      raw_income_scale +
-      median_income_demo_scale +
+    height_scale ~
+      income_scale +
+      income_demo_ranger_sar_vars_scale +
       physicians_scale +
       unweighted_pop_county_scale +
-      median_monthly_housing_cost_county_scale +
+      median_home_value_county_scale +
       land_area_2010_scale +
       education_scale +
       employment_all +
